--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -178,7 +178,7 @@
         <td align="center" valign="top">
           <table border="0" cellspacing="0" width="900px" class="table table__footer">
             <tr>
-              <td class="newsletter-footer-header" align="center" valign="top"><a class="email-link" href="{{site.contact.url}}/index.html?section=contact">CONTACT US</a></td>
+              <td class="newsletter-footer-header" align="center" valign="top"><a class="email-link" href="{{site.contact.url}}/index.html#contact">CONTACT US</a></td>
             </tr>
             <tr>
               <td class="newsletter-footer-bottom" align="center">
