--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -22,21 +22,7 @@
   </head>
   <body>
     {% include login.html %}
-    <div class="nav-modal">
-      <div class="inner">
-        <img src="images/logo.png" class="modal-logo"/>
-        <div class="menu-close"></div>
-        <ul class="nav">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="index.html#services">SERVICES</a></li>
-          <li><a href="listings.html">LISTINGS</a></li>
-          <li><a class="active" href="experience.html">EXPERIENCE</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></li>
-          <li><a class="contact-us-link">CONTACT</a></li>
-        </ul>
-      </div>
-    </div>
+    {% include nav-modal.html active-section="experience" %}
     {% include contact-form.html %}
     <div class="main">
       <div id="container-experience">
