--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -77,57 +77,7 @@
 
       <div class="ham-menu ham-menu-home"></div>
 
-      <div class="nav-modal">
-        <div class="inner">
-
-          <img src="images/logo.png" class="modal-logo" />
-
-          <div class="menu-close"></div>
-
-          <ul class="nav ham-nav">
-
-            <li>
-              <a class="active" href="/">HOME </a>
-            </li>
-
-            <li>
-              <a class="services-ham-home" href="index.html#services">
-                SERVICES
-              </a>
-            </li>
-
-            <li>
-              <a href="listings.html">
-                LISTINGS
-              </a>
-            </li>
-
-            <li>
-              <a href="experience.html">
-                EXPERIENCE
-              </a>
-            </li>
-
-            <li>
-              <a href="about.html">
-                ABOUT
-              </a>
-            </li>
-
-            <li>
-              <a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a>
-            </li>
-
-            <li>
-              <a class="contact-us-link">
-                CONTACT
-              </a>
-            </li>
-
-          </ul>
-
-        </div>
-      </div>
+      {% include nav-modal.html active-section="home" %}
 
       <div id="header-home">
 
@@ -374,7 +324,8 @@
     <script type="text/javascript" src="/scripts/home.js"></script>
     <script>
       $(document).ready(function() {
-        $(".services-home-button").click(function() {
+        $(".services-home-button").click(function(event) {
+          $('.main').removeClass('modal-open');
           window.history.pushState(null, null, '#services')
           scrollToServices();
         })
@@ -398,7 +349,7 @@
             $('.nav-modal').fadeOut();
             break;
           case '#services':
-            setActiveNavClass($('.services-ham-home'))
+            navActivateSection("active-section-services")
             break
         }
 
@@ -436,7 +387,10 @@
         });
       }
       function scrollToServices() {
-        setActiveNavClass($('.services-ham-home'))
+        $('body').removeClass('overflow-hidden');
+        $('.main').removeClass('modal-open')
+        $('.nav-modal').fadeOut();
+        navActivateSection("active-section-services")
         window.scrollTo({
           top: $('#services-content').offset().top,
           left: 0,
@@ -444,9 +398,8 @@
         });
       }
 
-      function setActiveNavClass(newActive) {
-        $(".active").removeClass("active");
-        newActive.addClass('active')
+      function navActivateSection(section) {
+        $("[class^=active-section-]")[0].classList = section
       }
     </script>
     <!-- TODO replace API key -->
