--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -52,7 +52,7 @@
   .submenu {
     display: inline;
     color: grey;
-    font-size: .8em;
+    font-size: 0.8em;
     > span {
       vertical-align: middle;
     }
@@ -79,23 +79,18 @@
 
   .plus-sign {
     &:after {
-      content: "+"
+      content: "+";
     }
   }
 
   .minus-sign {
     &:after {
-      content: "-"
+      content: "-";
     }
   }
 
   .listings {
-    margin: 42px auto 0;
-    width: 70vw;
-    max-width: $page-max-width;
-    > a {
-      text-decoration: none;
-    }
+    padding-top: 42px;
   }
 
   .filters {
@@ -105,12 +100,16 @@
     box-shadow: 0px 0px 18px 6px #f2f2f2;
     padding: 15px 0;
     text-align: center;
-    font-size: .7em;
+    font-size: 0.7em;
+    margin: 42px auto 0;
     width: 70vw;
+    max-width: $page-max-width;
+    > a {
+      text-decoration: none;
+    }
   }
 
   .listings__filter {
-    height: 23px;
     width: 22%;
     margin: 6px 7px;
     border-color: lightgrey;
@@ -135,10 +134,6 @@
     padding: 3px 5px;
     font-size: 1.1em;
     width: 80%;
-  }
-
-  .amenity__table {
-    display: table;
   }
 
   .amenity__cell {
@@ -178,16 +173,14 @@
 
   .listing-preview {
     position: relative;
+    text-decoration: none;
     width: 31%;
-    min-width: 240px;
+    max-width: 350px;
     margin: 0 18px 18px 0;
     margin-bottom: 36px;
     color: gray;
     background-color: white;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
-    @media screen and (max-width: $breakpoint-small-desktop) {
-      width: 44%;
-    }
     > a {
       text-decoration: none;
     }
@@ -197,7 +190,7 @@
       height: 190px;
       margin: 0;
       position: relative;
-        &:after {
+      &:after {
         display: block;
         content: " ";
         position: absolute;
@@ -228,19 +221,15 @@
       padding: 0 12px 10px 12px;
       height: calc(100% - 190px);
       .amenities {
-        font-size: .8em;
-        > table {
-          width: 99%;
-          margin: 0 auto;
-          > tbody {
-            > tr {
-              > td {
-                width: 135px;
-                min-height: 75px;
-                padding: 6px;
-                vertical-align: top;
-              }
-            }
+        width: 99%;
+        margin: 0 auto;
+        font-size: 0.8em;
+        > tr {
+          > td {
+            width: 135px;
+            min-height: 75px;
+            padding: 6px;
+            vertical-align: top;
           }
         }
         /*
@@ -266,7 +255,7 @@
         }
       }
       > p {
-        font-size: .8em;
+        font-size: 0.8em;
       }
     }
     .listing-preview-footer {
@@ -277,14 +266,6 @@
     }
   }
 
-  .amenities {
-    > p {
-      display: inline-block;
-      width: 49%;
-      white-space: nowrap;
-    }
-  }
-
   .listings-search {
     border-style: solid;
     border-color: lightgray;
@@ -292,18 +273,18 @@
     outline: none;
   }
 
-  input.listings-search::-webkit-input-placeholder{
-  color: $listings-text;
-  font-size:1.1em;
-  font-family: $font-brand;
-  line-height: 110%;
-  opacity: .7;
+  input.listings-search::-webkit-input-placeholder {
+    color: $listings-text;
+    font-size: 1.1em;
+    font-family: $font-brand;
+    line-height: 110%;
+    opacity: 0.7;
   }
 
   .paginator {
     text-align: center;
     position: relative;
-    font-size: .9em;
+    font-size: 0.9em;
     color: #959595;
     margin: -15px 0 23px 0;
     > div {
@@ -334,11 +315,11 @@
         height: 26px;
       }
     }
-   .navigate-page {
-     color: $primary-color;
-     cursor: pointer;
-     vertical-align: middle;
-   }
+    .navigate-page {
+      color: $primary-color;
+      cursor: pointer;
+      vertical-align: middle;
+    }
   }
 
   @include mobile {
@@ -369,7 +350,7 @@
     }
 
     .listing-preview {
-      width: 46%;
+      width: 90%;
       margin: 7px 5px;
       .header {
         height: 145px;
@@ -380,17 +361,13 @@
           line-height: 1;
         }
         .amenities {
-          font-size: .5em;
+          font-size: 0.5em;
           padding: 1px;
-          > table {
-            width: 100%;
-            margin: 0 auto;
-            > tbody {
-              > tr {
-                > td {
-                  padding: 1px 0px;
-                }
-              }
+          width: 100%;
+          margin: 0 auto;
+          > tr {
+            > td {
+              padding: 1px 0px;
             }
           }
         }
@@ -412,10 +389,8 @@
       > * {
         width: 90%;
         font-size: 1.2em;
-        height: 39px;
       }
       > button {
-        height: 39px;
         font-size: 1.3em;
       }
     }
